# ByteTransformer

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  code-format.sh
benchmark/: bert_bench.sh
bytetransformer/: CMakeLists.txt
bytetransformer/include/: attention.h  attention_nofused_utils.h  bert_transformer.h  common.h  cutlass_attention.h  cutlass_attention_defs.h  cutlass_attention_operators.h  gemm.h  gemm_bias_act.h  layernorm.h  reduce.h  remove_padding.h  softmax.h  variety_attention_fused.h
bytetransformer/src/: CMakeLists.txt  attention_fused.cu  attention_fused_long.cu  attention_nofused.cu  attention_nofused_utils.cu  bert_transformer.cu  cutlass_attention.cu  gemm.cu  gemm_bias_act.cu  layernorm.cu  remove_padding.cu
bytetransformer/th_op/: CMakeLists.txt  bert_transformer_ext.h  ths_op.cc  ths_op.h  ths_op_f.cc  ths_op_f.h  traits.h  util.h
cutlass_contrib/include/cutlass/contrib/: args_pack_def.h  functional.h
cutlass_contrib/include/cutlass/contrib/epilogue/threadblock/: default_epilogue_tensor_op.h  default_softmax_epilogue_tensor_op.h  default_thread_map_tensor_op_for_attr_mask.h  epilogue.h  output_tile_thread_map_for_attr_mask.h  predicated_tile_iterator.h  softmax_epilogue.h
cutlass_contrib/include/cutlass/contrib/epilogue/warp/: softmax_fragment_iterator_tensor_op.h  softmax_fragment_iterator_volta_tensor_op.h
cutlass_contrib/include/cutlass/contrib/gemm/device/: gemm_grouped.h
cutlass_contrib/include/cutlass/contrib/gemm/kernel/: default_gemm_grouped.h  gemm_grouped.h
cutlass_contrib/include/cutlass/contrib/gemm/threadblock/: default_mma.h  mma_base.h  mma_multistage.h
cutlass_contrib/include/cutlass/contrib/transform/threadblock/: predicated_tile_access_iterator.h  predicated_tile_iterator.h
licenses/: LICENSE-cutlass.txt
unit_test/: CMakeLists.txt  bert_transformer_test.cc  helper.h
unit_test/python_scripts/: bert_transformer_test.py
